<resources>
    <string name="sender_id">412438318009</string>
    <string name="app_name">Cayi</string>
    <string name="name_user">username</string>
    <string name="new_connection">Nueva conexión</string>
    <string name="opponent_pending">Pendiente</string>
    <string name="text_status_connect">Conectando...</string>
    <string name="text_status_checking">Chequeando…</string>
    <string name="text_status_connected">Conectado</string>
    <string name="text_status_disconnected">Desconectado</string>
    <string name="opponent_closed">Cerrado</string>
    <string name="text_status_no_answer">Sin respuesta</string>
    <string name="text_status_rejected">Rechazado</string>
    <string name="text_status_hang_up">Colgar</string>
    <string name="text_cuenta_nueva">Crear cuenta</string>
    <string name="pref_disable_built_in_aec_key">disable_built_in_aec_preference</string>
    <string name="pref_disable_built_in_aec_default">false</string>
    <string name="pref_noaudioprocessing_key">audioprocessing_preference</string>
    <string name="pref_noaudioprocessing_default">false</string>
    <string name="pref_opensles_key">opensles_preference</string>
    <string name="pref_opensles_default">false</string>
    <string name="pref_hwcodec_key">hwcodec_preference</string>
    <string name="pref_hwcodec_default">true</string>
    <string name="pref_videocodec_key">videocodec_preference</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s debe tener 3 &#8212;
        %2$s caracteres latinos alfanuméricos sin espacios, el primer carácter debe ser una letra</string>
    <string name="error_name_must_not_contain_special_characters_from_app_Password">%1$s debe tener 8 &#8212;
        %2$s caracteres latinos alfanuméricos sin espacios, el primer carácter debe ser una letra</string>
    <string name="field_name_user_login">Nombre de usuario</string>
    <string name="field_name_user_fullname">Nombre completo</string>
    <string name="field_name_user_email">Correo</string>
    <string name="field_name_user_password">Contraseña</string>
    <string name="field_name_user_confirm_password">Confirmar contraseña</string>
    <string name="splash_app_version">v %s</string>
    <string name="hint_user_full_name">Nombre completo</string>
    <string name="title_login_activity">Entrar</string>
    <string name="text_welcoming_message">Registro, por favor complete los campos solicitados.</string>
    <string name="hint_user_login">Usuario</string>
    <string name="text_select_dialog_to_join">Selecciona el diálogo para entrar</string>
    <string name="loading_users_error">Error al cargar usuarios.</string>
    <string name="removeDataError">Error de cierre de serión</string>
    <string name="dialogs_deletion_error">Error de diálogo</string>
    <string name="permission_unavailable">%s no está disponible ahorita!</string>
    <string name="text_select_users_to_call">Selecciona usuario(s) para marcar.</string>
    <string name="title_one_user_selected">%s usuario seleccionado</string>
    <string name="tile_many_users_selected">%s usuarios seleccionados</string>
    <string name="menu_refresh_users">Refrescar</string>
    <string name="menu_select_people_done">Terminado</string>
    <string name="placeholder_username_you">%s (Tú)</string>
    <string name="select_users_choose_users">Por favor, selecciona al menos un usuario.</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Ajuste de llamada</string>
    <string name="pref_hwcodec_title">Aceleración de hardware</string>
    <string name="pref_disable_built_in_aec_dlg">Inhabilitar built-in AEC</string>
    <string name="pref_disable_built_in_aec_title">Inhabilitar built-in AEC</string>
    <string name="pref_opensles_dlg">Usar OpenSL ES para reproducción de audio</string>
    <string name="pref_opensles_title">Usar OpenSL ES para reproducción de audio</string>
    <string name="pref_noaudioprocessing_dlg">Deshabilitar canal de procesamiento de audio</string>
    <string name="pref_noaudioprocessing_title">Deshabilitar proceso de audio</string>
    <string name="pref_resolution_key">resolution_preference</string>
    <string name="pref_resolution_title">Formato de video</string>
    <string name="pref_resolution_dlg">Entrar RTC video de resolución local</string>
    <string name="pref_resolution_default">-1</string>
    <string name="pref_startbitratevalue_key">startbitratevalue_preference</string>
    <string name="pref_startbitratevalue_title">Banda ancha (0&#8211;2000)</string>
    <string name="pref_startbitratevalue_default">0</string>
    <string name="pref_frame_rate_key">frame_rate</string>
    <string name="pref_frame_rate_title">Cuadros por segundo (0&#8211;30)</string>
    <string name="pref_frame_rate_default">0</string>
    <string name="pref_audiocodec_key">pref_audio_codec</string>
    <string name="pref_audiocodec_title">Audio codec por defecto</string>
    <string name="pref_audiocodec_def">ISAC</string>
    <string name="pref_audiocodec_dlg">Seleccionar audio codec por defecto</string>
    <string name="pref_videocodec_default">0</string>
    <string name="pref_videocodec_dlg">Seleccionar video codec por defecto</string>
    <string name="pref_videocodec_title">video codec por defecto</string>
    <string name="packet_failed">Se produce pérdida de paquetes</string>
    <string name="text_push_notification_message">"%s te llama."</string>
    <string name="in_conference">En conferencia</string>
    <string name="text_local_name">Tú</string>
    <string name="camera_swicth_failed">\"Falló cambiar cámara\"</string>
    <string name="opponents">y %s otro</string>
    <string name="text_status_closed">Cerrado</string>
    <string name="subtitle_text_logged_in_as">Bienvenido %s</string>
    <string name="actionbar_title_settings">Ajustes</string>
    <string name="dlg_creating_new_user">Creando cuenta…</string>
    <string name="dlg_loading_dialogs_users">Cargando usuarios…</string>
    <string name="dlg_retry">Reintentar</string>
    <string name="dlg_updating_dialog">Actualizando…</string>
    <string name="dlg_create_dialog">Creando chats…</string>
    <string name="dlg_loading_opponents">Cargando usuarios…</string>
    <string name="dlg_signal_error">Desconectado… chequea el estado de red!</string>
    <string name="dlg_login_error">El usuario no ha iniciado sesión</string>
    <string name="dlg_allow">Permitir</string>
    <string name="login_chat_login_error">Error de sesión. Intente de nuevo. Error</string>
    <string name="login_chat_retry">Trate de iniciar sesión. Por favor espere</string>
    <string name="action_start_login">Terminado</string>
    <string name="action_leave_dialog">Dejar dialogo</string>
    <string name="action_start_video_call">Video llamada</string>
    <string name="action_start_audio_call">Llamada</string>
    <string name="action_start_broadcast_call">Únete para transmitir</string>
    <string name="action_update_opponens_list">Actualizando usuarios</string>
    <string name="action_settings">Ajustes</string>
    <string name="action_logout">Salir de sesión</string>
    <string name="action_screen_share">Pantalla compartida</string>
    <string name="action_dialogs_app_info">Información de la aplicación</string>
    <string name="text_incoming_audio_call">Llamada entrante</string>
    <string name="text_incoming_video_call">Videollamada entrante</string>
    <string name="title_one_dialog_selected">%s diálogo seleccionado</string>
    <string name="tile_many_dialogs_selected">%s diálogos seleccionados</string>
    <string name="pref_manage_speakerphone_by_proximity_key">manage_speakerphone_by_proximity_preference</string>
    <string name="pref_manage_speakerphone_by_proximity_default">false</string>
    <string name="pref_answer_time_interval_key">answer_time_interval</string>
    <string name="pref_answer_time_interval_default_value">60</string>
    <string name="pref_disconnect_time_interval_key">disconnect_time_interval</string>
    <string name="pref_disconnect_time_interval_default_value">10</string>
    <string name="pref_dialing_time_interval_key">Dialing_time_interval</string>
    <string name="pref_dialing_time_interval_default_value">5</string>
    <string name="also_on_call">También en llamada:</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="connection_was_lost">Conexión perdida</string>
    <string name="opponent">y %s </string>
    <string name="accepted">Aceptado</string>
    <string name="stop_share">Parar</string>
    <string name="appinfo_application_version">Versión de la aplicación:</string>
    <string name="appinfo_qbsdk_version">versión de QuickBlox SDK:</string>
    <string name="appinfo_application_id">ID de aplicación:</string>
    <string name="appinfo_authorization_key">Authorization key:</string>
    <string name="appinfo_authorization_secret">Authorization secret:</string>
    <string name="appinfo_account_key">Account key:</string>
    <string name="appinfo_api_domain">Dominio API:</string>
    <string name="appinfo_chat_domain">Dominio de Chat:</string>
    <string name="appinfo_title">Información de la aplicación</string>
    <string name="appinfo_qa_verion">Versión QA:</string>
    <string name="notification_title">Tienes una llamada activa</string>
    <string name="notification_text">Toca para regresar a la llamada %1$s</string>
    <string name="type_your_password">Escribe tu contraseña</string>
    <string name="New_user_signIn">¿Nuevo usuario?</string>
    <string name="username">Usuario</string>
    <string name="r_u_user">¿Ya tienes cuenta?</string>
    <string name="Confirm">Confirmar</string>
    <string name="Challenge">Reto</string>
    <string name="True">Verdad</string>
    <string name="tested_text"></string>
    <string name="charada">Charada</string>
    <string name="obligacion">El Usuario se obliga a usar la aplicación y los contenidos encontrados en ella de una manera diligente, correcta, lícita y en especial, se compromete a NO realizar las conductas que se mencionan a continuación:
 Utilizar los contenidos de forma, con fines o efectos contrarios a la ley, a la moral y a las buenas costumbres generalmente aceptadas o al orden público
Reproducir, copiar, representar, utilizar, distribuir, transformar o modificar los contenidos de la aplicación.
 Suprimir, eludir o manipular el derecho de autor y demás datos identificativos de los derechos de autor incorporados a los contenidos.
No permitir que terceros ajenos a usted usen la aplicación móvil con su clave.
Utilizar la aplicación y los contenidos con fines lícitos y/o ilícitos, contrarios a lo establecido en estos Términos y Condiciones, o al uso mismo de la aplicación, que sean lesivos de los derechos e intereses de terceros
    </string>
    <string name="responsabilidad">
CAYI procura garantizar disponibilidad, continuidad o buen funcionamiento de la aplicación. CAYI podrá bloquear, interrumpir o restringir el acceso a esta cuando lo considere necesario para el mejoramiento de la aplicación o por dada de baja de la misma.
Se recomienda al Usuario tomar medidas adecuadas y actuar diligentemente al momento de acceder a la aplicación, como por ejemplo, contar con programas de protección, antivirus, para manejo de malware, spyware y herramientas similares.
</string>
</resources>