<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_view_login_activity"
    style="@style/MatchParent"
    android:layout_marginLeft="@dimen/padding_start"
    android:orientation="vertical">

    <TextView
        style="@style/MatchWidth"
        android:paddingTop="@dimen/padding_actionbar"
        android:text="@string/text_welcoming_message" />

    <EditText
        android:id="@+id/userLoginEditText"
        style="@style/MatchWidth"
        android:hint="@string/hint_user_login"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userEmail"
        style="@style/MatchWidth"
        android:hint="@string/field_name_user_email"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/Password"
        style="@style/MatchWidth"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirmPassword"
        style="@style/MatchWidth"
        android:hint="@string/field_name_user_confirm_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/returned"
        style="@style/MatchWidth"
        android:paddingTop="@dimen/padding_actionbar"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/color_blue_accent"
        android:text="@string/r_u_user" />

</LinearLayout>