<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"

    android:orientation="vertical"
    tools:context=".activities.SignInActivity"
    android:gravity="center"
    android:background="@drawable/login_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="15dp">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:fontFamily="@font/chewy"
        android:textColor="@color/CayiColor"
        android:textSize="60sp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/usernameEditText_SignIn"
        style="@style/MatchWidth"
        android:hint="@string/username"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/correo_SignIn"
        style="@style/MatchWidth"
        android:hint="Correo"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/userfullnameEditText_SignIn"
        style="@style/MatchWidth"
        android:hint="@string/hint_user_full_name"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp"
        android:visibility="gone"
        />

    <EditText
        android:id="@+id/Password_SignIn"
        style="@style/MatchWidth"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:paddingTop="@dimen/padding_top"
        android:singleLine="true"
        android:textSize="16sp" />

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/New_User_tv"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:layout_width="190dp"
        android:layout_gravity="center"
        android:background="@drawable/button_circle"
        android:textAlignment="center"
        android:text="@string/New_user_signIn" />
    </LinearLayout>

</LinearLayout>