<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/chewy"
        android:textSize="70sp"
        android:layout_marginBottom="50dp">

    </TextView>
   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content">
    <Button
        android:id="@+id/Entrar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:textColor="@color/CayiColor"
        android:background="@drawable/button_circle_entrada"
        android:text="@string/title_login_activity">

    </Button>

    <Button
        android:id="@+id/Crear"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/Entrar"
        android:text="@string/text_cuenta_nueva"
        android:layout_marginLeft="30dp"
        android:textColor="@color/CayiColor"
        android:background="@drawable/button_circle_entrada"
        android:layout_toRightOf="@+id/Entrar">

    </Button>
   </LinearLayout>
</LinearLayout>