<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentOpponents"
    style="@style/MatchParent"
    android:background="@color/background_fragment_conversation">

    <com.quickblox.videochat.webrtc.view.QBRTCSurfaceView
        android:id="@+id/remote_video_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/grid_opponents" />

    <com.quickblox.videochat.webrtc.view.QBRTCSurfaceView
        android:id="@+id/local_video_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/action_bar_height" />

    <include layout="@layout/view_outgoing_screen" />

    <TextView
        android:id="@+id/connection_status_local"
        style="@style/MatchWidth"
        android:layout_marginBottom="@dimen/margin_very_small"
        android:gravity="center_horizontal"
        android:maxLength="13"
        android:maxLines="1"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textStyle="normal|italic" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/grid_opponents"
        style="@style/WrapContent"
        android:layout_height="0dp"
        android:layout_above="@+id/element_set_video_buttons"
        android:layout_marginBottom="@dimen/margin_common"
        android:horizontalSpacing="@dimen/margin_small"
        android:numColumns="3"
        android:verticalSpacing="@dimen/margin_small"
        android:visibility="invisible"
        tools:listitem="@layout/list_item_opponent_from_call" />

    <include
        android:id="@+id/element_set_video_buttons"
        layout="@layout/view_action_buttons_conversation_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/empty_stub"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_common" />

    <View
        android:id="@+id/empty_stub"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true" />

    <TextView
        android:id="@+id/Pregunta"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="@font/bowlby_one_sc"
        android:gravity="top"
        android:text="@string/tested_text"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="36dp"
        tools:ignore="RtlCompat" />


    <TextView
        android:id="@+id/Verdad"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="normal|italic"
        android:text="@string/True"
        android:layout_below="@id/Confirmar"
        android:padding="13dp"
        android:textSize="15sp"
        android:textAlignment="center"
        android:background="@color/CayiColor"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="1dp"
        />

    <TextView
        android:id="@+id/Reto"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:textStyle="normal|italic"
        android:text="@string/Challenge"
        android:background="@color/CayiColor"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_marginLeft="1dp"
        android:layout_marginBottom="2dp"
        android:textAlignment="center"
        android:layout_below="@+id/Verdad"
        />
    <TextView
        android:id="@+id/Charada"
        android:padding="10dp"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@color/CayiColor"
        android:textStyle="normal|italic"
        android:text="@string/charada"
        android:textAlignment="center"
        android:layout_marginLeft="1dp"
        android:layout_below="@+id/Reto"
        />


    <TextView
        android:id="@+id/Confirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textStyle="normal|italic"
        android:text="@string/Confirm"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

</RelativeLayout>